--- a/JSE-SWING-JDBC-PROYECTO-CASA/src/test/BuscarPanel.form
+++ b/JSE-SWING-JDBC-PROYECTO-CASA/src/test/BuscarPanel.form
@@ -156,6 +156,10 @@
                 <Column editable="true" title="Title 4" type="java.lang.Object"/>
               </Table>
             </Property>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Cursor Por defecto"/>
+            </Property>
+            <Property name="rowSelectionAllowed" type="boolean" value="false"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="jScrollPane2.setVisible(false);&#xd;&#xa;"/>
