--- a/JSE-SWING-JDBC-PROYECTO-CASA/src/test/BuscarPanel.form
+++ b/JSE-SWING-JDBC-PROYECTO-CASA/src/test/BuscarPanel.form
@@ -196,11 +196,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Ecologia"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbEspecie2ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JCheckBox" name="cbEspecie3">
       <Properties>
         <Property name="text" type="java.lang.String" value="Referencias"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbEspecie3ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JCheckBox" name="cbEspecie4">
       <Properties>
